--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,11 @@
         <activity
             android:name=".activities.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".activities.RecipesDetailScreenActivity">
 
         </activity>
-        <activity android:name=".activities.RecipesDetailScreenActivity">
+        <activity android:name=".activities.ResturantDetailScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
