--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,18 @@
         <activity
             android:name=".activities.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".activities.RecipesDetailScreenActivity">
-
-        </activity>
-        <activity android:name=".activities.ResturantDetailScreenActivity">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activities.RecipesDetailScreenActivity">
+
+        </activity>
+        <activity android:name=".activities.ResturantDetailScreenActivity">
+
         </activity>
     </application>
 
