Finished Fix bug for restaurant list search

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".activities.ResturantDetailScreenActivity">
 
         </activity>
+        <activity android:name=".activities.SearchActivity"></activity>
     </application>
 
 </manifest>
