--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         </activity>
         <activity android:name=".activities.SearchActivity"></activity>
 
+        <activity android:name=".activities.CustomLightboxActivity"></activity>
+
         <!-- content provider -->
         <provider
             android:name=".data.persistence.RecipeProvider"
